--- a/kubernetes/frontend.yaml
+++ b/kubernetes/frontend.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: pkpavan14/wanderlust-frontend:frontend
+          image: pkpavan14/wanderlust-frontend:V1
           ports:
             - containerPort: 5173
             
